@@ -16,6 +16,7 @@ In 0.10:
        - fixed a serious bug (crashing clients when dragging in 
          opaque mode)
        - tiny fix for gravity handling
+       - *many* modifications to autoraise
 
   patchlevel 16:
        - fix for "move" via keyboard (pointer warp)
